--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="./css/style.css"> <!--  Importing the CSS-->
-
-  <!--  Importing the Custom Icons from Google Fonts-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
   <title>Lista de Tarefas</title>
 </head>
@@ -15,13 +14,15 @@
 
   <main>
 
+      <h1 align="center">Lista de Tarefas</h1>
+    <br>    
+    
     <form class="add-form">
       <input type="text" placeholder="Adicionar tarefa" class="input-task">
-      <button type="button">+</button>
+      <button type="submit">+</button>
     </form>
 
     <table>
-
       <thead>
         <tr>
           <th>Tarefa</th>
@@ -32,7 +33,7 @@
       </thead>
 
       <tbody>
-        <tr>
+        <!-- <tr>
           <td>título da task</td>
           <td>00 de janeiro de 2023 15:00</td>
           <td>
@@ -41,26 +42,24 @@
               <option value="em andamento">em andamento</option>
               <option value="concluída">concluída</option>
             </select>
-          </td>    
+          </td>
           <td>
-            <button class="btn-action">~
-              <span class="material-symbols-outlined">
-              edit
-              </span>
-            </button>
             <button class="btn-action">
-              <span class="material-symbols-outlined">
-                delete
-                </span>
+              <span class="material-symbols-outlined">edit</span>
+            </button>
+
+            <button class="btn-action">
+              <span class="material-symbols-outlined">delete</span>
             </button>
           </td>
-        </tr>
+        </tr> -->
       </tbody>
+
 
     </table>
 
   </main>
 
-  <script src="./js/script.ts"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
